# rsud-server-stack

./: .dockerignore  .gitignore  .gitnexusignore  AGENTS.md  CLAUDE.md  CODING-RULES.md  CONTEXT-MAP.md  Makefile  README.md  docker-compose.yml  skills-lock.json
.beads/: interactions.jsonl  issues.jsonl  metadata.json
backend/: .env.example  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/app/: config.py  main.py  seed.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 001_initial_users_sessions.py  002_rooms_inspection_items.py  003_inspections.py  004_analytics_background_jobs.py  005_background_jobs_retry.py  006_seed_admin_user.py
backend/app/core/: database.py  dependencies.py  security.py
backend/app/modules/analytics/: CONTEXT.md  api.py  models.py  schemas.py  services.py
backend/app/modules/auth/: CONTEXT.md  api.py  dependencies.py  models.py  schemas.py  seed.py  services.py
backend/app/modules/background/: CONTEXT.md  models.py  services.py  worker.py
backend/app/modules/inspection/: CONTEXT.md  api.py  models.py  schemas.py  services.py
backend/app/modules/master/: CONTEXT.md  api.py  models.py  schemas.py  services.py
backend/app/modules/media/: CONTEXT.md  api.py  services.py
backend/graphify-out/: .graphify_analysis.json  .graphify_root  graph.json  manifest.json
backend/graphify-out/cache/: stat-index.json
backend/tests/: conftest.py  test_analytics.py  test_auth.py  test_inspection.py  test_master.py
docs/: 00-core-prompt.md  01-database-schema.md  02-prd-server.md  03-project-structure.md  (+6 more)
(+60 files in other folders)
