[project]
name = "rsud-server"
version = "0.1.0"
description = "RSUD Ajibarang Server Stack - Backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite",
    "asyncpg",
    "alembic",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "bcrypt<4.1",
    "python-multipart",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
